Add VisualEditorEvent which is responsible for dispatching all unusual events in order to communicate with Moonshine (reference prominic/Moonshine-IDE#396)

--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -50,6 +50,7 @@
 		import utils.MoonshineBridgeUtils;
 		
 		import view.interfaces.IVisualEditorLibraryBridge;
+		import view.suportClasses.events.VisualEditorEvent;
 
 		private var copyPasteManager:CopyPasteVisualEditorManager;
 
@@ -102,6 +103,16 @@
 				this.editingSurface.fromXML(xml);
 
 				_fileStreamMoonshine.close();
+
+				var xmlRootList:XMLList = xml.RootDiv.@save;
+				if (xmlRootList.length() > 0)
+				{
+					var saveFile:Boolean = xmlRootList[0] == "true";
+					if (saveFile)
+					{
+						dispatchEvent(new VisualEditorEvent(VisualEditorEvent.SAVE_CODE));
+					}
+				}
 			}
 
 			private function createNewFileIfNotExists(filePath:String):File
