--- a/src/view/primeFaces/forms/SelectOneListboxForm.mxml
+++ b/src/view/primeFaces/forms/SelectOneListboxForm.mxml
@@ -8,7 +8,6 @@
 	<fx:Script>
 		<![CDATA[
 
-			import mx.binding.utils.ChangeWatcher;
 			import mx.events.FlexEvent;
 			import mx.utils.ObjectUtil;
 			
@@ -18,7 +17,7 @@
 			import data.SelectItem;
 			
 			import view.interfaces.IHistorySurfaceComponent;
-			import view.primeFaces.surfaceComponents.components.SelectOneMenu;
+			import view.primeFaces.surfaceComponents.components.SelectOneListbox;
 			import view.suportClasses.PropertyChangeReferenceCustomHandlerBasic;
 
 			private static const DEFAULT_LABEL:String = "Title";
@@ -81,12 +80,12 @@
 			private function updateColumnList():void
 			{
 				if (!dgColumns) return;
-				dgColumns.dataProvider = (selectedItem as SelectOneMenu).dataProvider;
+				dgColumns.dataProvider = (selectedItem as SelectOneListbox).dataProvider;
 			}
 			
 			private function updateToOwner(updateType:String = null, itemIndex:int = -1):void
 			{
-				(selectedItem as SelectOneMenu).updateHistoryState(updateType, itemIndex);
+				(selectedItem as SelectOneListbox).updateHistoryState(updateType, itemIndex);
 			}
 			
 			protected function onRowEditStarts(event:GridItemEditorEvent):void
@@ -106,7 +105,7 @@
 					object: ObjectUtil.copy(dgColumns.dataProvider[dgColumns.selectedIndex]),
 					index: dgColumns.selectedIndex
 				};
-				(selectedItem as SelectOneMenu).propertyChangeFieldReference = new PropertyChangeReferenceCustomHandlerBasic(selectedItem as IHistorySurfaceComponent, "updateItemAt", historyObject);
+				(selectedItem as IHistorySurfaceComponent).propertyChangeFieldReference = new PropertyChangeReferenceCustomHandlerBasic(selectedItem as IHistorySurfaceComponent, "updateItemAt", historyObject);
 			}
 			
 		]]>
@@ -118,9 +117,7 @@
 	
 	<forms:TextForm label="Value" textProperty="value"
 					prompt="#\{bean.property\}"/>
-	
-	<forms:ToggleButtonSelectedForm label="Editable" textProperty="editable"/>
-	
+
     <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin" height="100%">
 		<s:DataGrid id="dgColumns"
 					width="100%" height="100%"
