--- a/src/view/primeFaces/forms/SelectOneListboxForm.mxml
+++ b/src/view/primeFaces/forms/SelectOneListboxForm.mxml
@@ -39,7 +39,13 @@
 				this._label = value;
 				this.dispatchEvent(new Event("labelChange"));
 			}
-	
+
+			[Bindable("change")]
+			protected function get selectedListbox():SelectOneListbox
+			{
+				return selectedItem as SelectOneListbox;
+			}
+
 			private function editSelectedItem():void
 			{
 				updatePropertyEditorPriorToEdit();
@@ -122,6 +128,7 @@
 		<s:DataGrid id="dgColumns"
 					width="100%" height="100%"
 					editable="true" sortableColumns="false" draggableColumns="false"
+					selectedItem="@{selectedListbox.selectedItem}"
 					gridItemEditorSessionSave="onRowEditEnd(event)" gridItemEditorSessionStart="onRowEditStarts(event)">
 			<s:columns>
 				<s:ArrayList>
